<?xml version="1.0"?>
<package format="2">
  <name>rviz_sonar_image</name>
  <version>0.0.0</version>
  <description>Display RawSonarImage messages in rviz</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>

